UI Default Product
UI các trang default

--- a/rcAdmin/Default.cshtml
+++ b/rcAdmin/Default.cshtml
@@ -25,5 +25,5 @@
 
  <fieldset>
    <p>Hello: @loginUr</p>
-     <p>You can change your password here:</p>     
+     <p>You can change your password <a href="~/rcAdmin/ChangePassword">here</a></p>     
 </fieldset> 
