--- a/rcAdmin/AllPages.cshtml
+++ b/rcAdmin/AllPages.cshtml
@@ -24,24 +24,28 @@
 @section menu{
     @RenderPage("_Menu.cshtml")
 }
-<fieldset>
-    <legend>All Pages | <a href="~/rcAdmin/NewPage">Create Page</a> </legend>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="EditPage.cshtml?id=@item.pId" title="Edit Page" ><img
-                        src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.pId&pName=@item.pName" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                    grid.Column("pName", "Page Name", style: "rcGB"),
-                    grid.Column("Last Edited", format: @<i>@item.pEditDate</i>),
-                    grid.Column(format: @<a href="AllPages.cshtml?id=@item.pId" title="Delete" onclick="return confirm('Are you sure you want to delete ?')"><img
-                        src="images/delete.gif" alt="Delete" class="rcGC" /></a>)
-                )
-            )
-    </div>
-</fieldset>
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Pages | <a href="~/rcAdmin/NewPage">Create Page</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
+                    tableStyle: "tDark",
+                    headerStyle: "",
+                    alternatingRowStyle: "alt",
+                    footerStyle: "pgr",
+                    columns: grid.Columns(
+                        grid.Column("pName", "Page Name", style: "rcGB"),
+                        grid.Column("Last Edited", format: @<i>@item.pEditDate</i>),
+                        grid.Column(format: @<a href="EditPage.cshtml?id=@item.pId" title="Edit Page" ><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                        grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.pId&pName=@item.pName" title="Widgets"><img src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
+                        grid.Column(format: @<a href="AllPages.cshtml?id=@item.pId" title="Delete" onclick="return confirm('Are you sure you want to delete ?')"><img src="images/delete.gif" alt="Delete" class="rcGC" /></a>)
+                        )
+                     )
+            </div>
+        </div>
+    </fieldset>
+</div>
