--- a/rcAdmin/AllWidgets.cshtml
+++ b/rcAdmin/AllWidgets.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Page.Title = "Show All Widgets";
-    
+
     var db = Database.Open("razorC");
 
     //delete record 
@@ -11,13 +11,13 @@
         db.Execute(sqlDelete, deleteID);
         Response.Redirect("AllWidgets");
     }
-    
-    
+
+
     var qStr = "Select Id, wName, wEditDate, wFile from rc_Widgets order by wEditDate DESC";
     var data = db.Query(qStr);
 
     var grid = new WebGrid(source: data,
-                            rowsPerPage:20);
+                            rowsPerPage: 20);
 
     
 }
@@ -26,24 +26,31 @@
 
 }
 @section menu{
-@RenderPage("_Menu.cshtml")
+    @RenderPage("_Menu.cshtml")
 }
- <fieldset>
-        <legend>All Widgets | <a href="~/rcAdmin/NewWidget">Create Widget</a> </legend>
-<div id ="grid">
- @grid.GetHtml( 
-                tableStyle: "rcGrid", 
-                headerStyle: "head", 
-                alternatingRowStyle: "alt", 
-                footerStyle:"pgr",
-                columns: grid.Columns( 
-                    grid.Column(format:@<text>@rcHelpers.EditWidgetImg(item.Id,item.wFile)</text>),
-                    grid.Column("wName", "Widget Name", style: "rcGB"), 
-                    grid.Column("Last Edited", format:@<i>@item.wEditDate</i>),
-                    grid.Column(format:@<text>@rcHelpers.DeleteWidgetImg(item.Id,item.wFile)</text>)
-                ) 
-            ) 
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Widgets | <a href="~/rcAdmin/NewWidget">Create Widget</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
+                    tableStyle: "tDark",
+                    headerStyle: "",
+                    alternatingRowStyle: "alt",
+                    footerStyle: "pgr",
+                    columns: grid.Columns(
+                        grid.Column("wName", "Widget Name", style: "rcGB"),
+                        grid.Column("Last Edited", format: @<i>@item.wEditDate</i>),
+                        grid.Column(format: @<text>@rcHelpers.EditWidgetImg(item.Id, item.wFile)</text>),
+                        grid.Column(format: @<text>@rcHelpers.DeleteWidgetImg(item.Id, item.wFile)</text>)
+                        )
+                     )
 
 
+            </div>
+        </div>
+    </fieldset>
 </div>
-</fieldset> 
