--- a/rcAdmin/Editor.cshtml
+++ b/rcAdmin/Editor.cshtml
@@ -2,95 +2,129 @@
 
     Page.Title = "Edit layout & CSS files";
 
-    var pMasterPage=Request["pMasterPage"];
-    
-    var fileToEdit=Request["fileToEdit"];
-    var fileContent=Request.Unvalidated("fileContent");
+    var pMasterPage = Request["pMasterPage"];
+
+    var fileToEdit = Request["fileToEdit"];
+    var fileContent = Request.Unvalidated("fileContent");
 
     var errMSG = "";
-       
-    
+
+
     //List all Layout files
-    DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/rcLayouts"));  
+    DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/rcLayouts"));
     FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly);
-    
-    if (pMasterPage.IsEmpty()){
-    pMasterPage=fileInfo[0].Name.ToString();
+
+    if (pMasterPage.IsEmpty())
+    {
+        pMasterPage = fileInfo[0].Name.ToString();
     }
 
     //List all css files for selected layout
-    FileInfo[] fileInfoCSS=null ;
+    FileInfo[] fileInfoCSS = null;
     //some layout files may not have unique folders with the files
-    try{
-    DirectoryInfo dirInfoCSS = new DirectoryInfo(Server.MapPath("~/rcLayouts/" + rcFunctions.CleanRCNames(pMasterPage)));  
-    fileInfoCSS = dirInfoCSS.GetFiles("*.css", SearchOption.AllDirectories);
-    }catch{}
-    
-       
-    if (IsPost){
-
-        if(!fileContent.IsEmpty() && !fileToEdit.IsEmpty() && fileToEdit.Contains("rcLayouts")){
-            try {
-            System.IO.File.WriteAllText(fileToEdit,fileContent);
-            errMSG="File updated";
-            }catch(Exception ex){
-                errMSG=ex.ToString();
-                }
-        }
-    }else{
-    if (!fileToEdit.IsEmpty() && fileToEdit.Contains("rcLayouts")){
-    fileContent= System.IO.File.ReadAllText(fileToEdit);
+    try
+    {
+        DirectoryInfo dirInfoCSS = new DirectoryInfo(Server.MapPath("~/rcLayouts/" + rcFunctions.CleanRCNames(pMasterPage)));
+        fileInfoCSS = dirInfoCSS.GetFiles("*.css", SearchOption.AllDirectories);
     }
- }
+    catch { }
+
+
+    if (IsPost)
+    {
+
+        if (!fileContent.IsEmpty() && !fileToEdit.IsEmpty() && fileToEdit.Contains("rcLayouts"))
+        {
+            try
+            {
+                System.IO.File.WriteAllText(fileToEdit, fileContent);
+                errMSG = "File updated";
+            }
+            catch (Exception ex)
+            {
+                errMSG = ex.ToString();
+            }
+        }
+    }
+    else
+    {
+        if (!fileToEdit.IsEmpty() && fileToEdit.Contains("rcLayouts"))
+        {
+            fileContent = System.IO.File.ReadAllText(fileToEdit);
+        }
+    }
   
     
 }
 
 @section head {
-<script type="text/javascript">
-    $(document).ready(function(){
+    <script type="text/javascript">
+        $(document).ready(function () {
 
-        $("#pMasterPage").change(function(){
-        $("#selectLayout").submit();
-        });
+            $("#pMasterPage").change(function () {
+                $("#selectLayout").submit();
+            });
 
         });
-</script>
+    </script>
 }
 @section menu{
-@RenderPage("_Menu.cshtml")
+    @RenderPage("_Menu.cshtml")
 }
-<form name="selectLayout" id="selectLayout" method="get" action="">
- <fieldset>
-        <legend>Select layout</legend>
-        @errMSG
-        <ol>
-            <li>
-                <select id="pMasterPage" name="pMasterPage">
-               @foreach (var f in fileInfo )
-               {
-                <option value="@f.Name" @if(pMasterPage==f.Name){<text>selected="selected"</text>}>@rcFunctions.CleanRCNames(f.Name)</option>
-                }
-                </select> <img src="images/help.gif" alt="help" title="All layouts are in rcLayouts folder - you can change/modify them to fit your needs" />
-            </li>
-            <li>Layout file: <a href="@Href("~/rcAdmin/Editor.cshtml?fileToEdit=" +@Server.MapPath("~/rcLayouts/") +@pMasterPage +"&pMasterPage=" +@pMasterPage)">@pMasterPage</a></li>
-            <li>CSS file(s):
-                @if (fileInfoCSS!=null){
-                    foreach (var f in fileInfoCSS ){
-               <text> <a href="@Href("~/rcAdmin/Editor.cshtml?fileToEdit=" +@f.DirectoryName +"/"  +@f.Name +"&pMasterPage=" +@pMasterPage)">@f.Name</a> , </text>  
+<div class="fluid">
+    <form name="selectLayout" id="selectLayout" method="get" action="">
+        <fieldset>
+            <div class="widget">
+                <div class="whead">
+                    <h6>Select layout</h6>
+                    <div class="clear"></div>
+                </div>
+                @*@errMSG*@
+                <div class="formRow">
+                    <div class="selector">
+                        <select id="pMasterPage" class="selectReq" name="pMasterPage">
+                            @foreach (var f in fileInfo)
+                            {
+                                <option value="@f.Name" @if (pMasterPage == f.Name)
+                                                        {<text>selected="selected"</text>}>@rcFunctions.CleanRCNames(f.Name)</option>
+                            }
+                        </select>
+                        @*<img src="images/help.gif" alt="help" title="All layouts are in rcLayouts folder - you can change/modify them to fit your needs" />*@
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    Layout file: <a href="@Href("~/rcAdmin/Editor.cshtml?fileToEdit=" + @Server.MapPath("~/rcLayouts/") + @pMasterPage + "&pMasterPage=" + @pMasterPage)">@pMasterPage</a><br />
+                    CSS file(s):
+                @if (fileInfoCSS != null)
+                {
+                    foreach (var f in fileInfoCSS)
+                    {
+                    <text> <a href="@Href("~/rcAdmin/Editor.cshtml?fileToEdit=" + @f.DirectoryName + "/" + @f.Name + "&pMasterPage=" + @pMasterPage)">@f.Name</a> , </text>  
                     }
                 }
-            </li>
-        </ol>
-</fieldset>
+
+                </div>
+            </div>
+        </fieldset>
     </form>
 
-<fieldset>
-   <legend>File content (edit ONLY if you know what you are doing:)</legend>
-    <form name="fileEdit"   method="post" action="">
-    <textarea name="fileContent" rows="30" cols="90">@fileContent</textarea>
-              <p class="form-actions">
-            <input type="submit" value="Update" title="Update" />
-        </p>
-     </form>
-</fieldset>
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>File content (edit ONLY if you know what you are doing:)</h6>
+                <div class="clear"></div>
+            </div>
+            <form name="fileEdit" method="post" action="">
+                <div class="formRow">
+                    <textarea name="fileContent" rows="30" cols="90">@fileContent</textarea>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <input type="submit" value="Update" title="Update" class="buttonM bBlue formSubmit" />
+                    <div class="clear"></div>
+                </div>
+            </form>
+        </div>
+    </fieldset>
+</div>
