--- a/rcAdmin/Countries/Index.cshtml
+++ b/rcAdmin/Countries/Index.cshtml
@@ -3,7 +3,7 @@
     var db = Database.Open("Checking_Master");
     //Database.OpenConnectionString("Checking_Master")
 
-    //delete record 
+    //delete record
     var deleteID = Request["cid"];
     if (!deleteID.IsEmpty())
     {
@@ -12,47 +12,69 @@
         Response.Redirect("Index");
     }
 
+    var searchAcc = Request["searchAcc"];
+    var grid = new WebGrid(source: null,
+                                rowsPerPage: 20); ;
 
-    var qStr = "Select * from Countries order by Id_Country desc";
-    var data = db.Query(qStr);
+    if (String.IsNullOrEmpty(searchAcc))
+    {
+        var qStr = "Select * from Countries order by Id_Country desc";
+        var data = db.Query(qStr);
 
-    var grid = new WebGrid(source: data,
-                            rowsPerPage: 20);
+        grid = new WebGrid(source: data,
+                               rowsPerPage: 20);
+    }
+    else
+    {
+        var qStr = "Select * from Countries where Country_Name like @0 order by Id_Country desc";
+        var data = db.Query(qStr, searchAcc);
 
-    
+        grid = new WebGrid(source: data,
+                               rowsPerPage: 20);
+
+    }
+
+    Commons.releaseDBConnecttion(db);
+
 }
 @section head {}
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
 <div class="fluid">
-<fieldset>
-    <div class="widget">
-        <div class="whead">
-            <h6>All Pages | <a href="~/rcAdmin/Countries/New">Create Country</a> </h6>
-            <div class="clear"></div>
-        </div>
-        <div id="grid" class="widget">
-            @grid.GetHtml(
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Pages | <a href="~/rcAdmin/Countries/New">Create Country</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div class="searchLine">
+                <form action="" method="POST">
+                    <input type="text" id="search" name="searchAcc" value="" placeholder="Enter Account Name ..." class="ac ui-autocomplete-input" />
+                    <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+                </form>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
                     tableStyle: "tDark",
                     headerStyle: "",
                     alternatingRowStyle: "alt",
                     footerStyle: "pgr",
                     columns: grid.Columns(
-                        @*grid.Column(format: @<a href="WidgetsInSection.cshtml?cid=@item.Id_Country&pName=@item.Country_Name" title="Widgets"><img
-                            src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
-                                                                  grid.Column("Country_Name", "Country name", style: "rcGB"),
-                                                                  grid.Column("Comments", "Comments", style: "rcGB"),
-                                                                  grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
+                    @*grid.Column(format: @<a href="WidgetsInSection.cshtml?cid=@item.Id_Country&pName=@item.Country_Name" title="Widgets"><img
+                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+grid.Column("Country_Name", "Country name", style: "rcGB"),
+                                                                               grid.Column("Comments", "Comments", style: "rcGB"),
+                                                                               grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
                         grid.Column(format: @<a href="~/rcAdmin/Countries/Edit?cid=@item.Id_Country" title="Edit Page">
-                                            <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
-                                        </a>),
+                    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
+                </a>),
                         grid.Column(format: @<a href="Index?cid=@item.Id_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-                                            <img src="images/delete.gif" alt="Delete" class="rcGC" />
-                                        </a>)
-                      )
-                  )
+                    <img src="images/delete.gif" alt="Delete" class="rcGC" />
+                </a>)
+                   )
+               )
+            </div>
         </div>
-    </div>
-</fieldset>
+    </fieldset>
 </div>
