--- a/rcAdmin/ForwardingZone/Index.cshtml
+++ b/rcAdmin/ForwardingZone/Index.cshtml
@@ -12,14 +12,28 @@
         Response.Redirect("Index");
     }
 
-
-    var qStr = "Select * from Forwarding_Zone t1 inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service order by Id_Forwarding_Zone desc";
-    var data = db.Query(qStr);    
-    
-    var grid = new WebGrid(source: data,
+    var searchAcc = Request["searchAcc"];
+    var grid = new WebGrid(source: null,
                             rowsPerPage: 20);
+    if(String.IsNullOrEmpty( searchAcc))
+    {
 
-    
+        var qStr = "Select * from Forwarding_Zone t1 inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service order by Id_Forwarding_Zone desc";
+        var data = db.Query(qStr);
+
+        grid = new WebGrid(source: data,
+                            rowsPerPage: 20);
+    }
+    else
+    {
+        var qStr = "Select * from Forwarding_Zone t1 inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service where Forwarding_Zone like @0 order by Id_Forwarding_Zone desc";
+        var data = db.Query(qStr, searchAcc);
+
+        grid = new WebGrid(source: data,
+                            rowsPerPage: 20);
+        
+    }
+    Commons.releaseDBConnecttion(db);
 }
 @section head {}
 @section menu{
@@ -31,6 +45,12 @@
             <div class="whead">
                 <h6>All Forwarding Countries | <a href="~/rcAdmin/ForwardingZone/New">Create Forwarding Zone</a> </h6>
                 <div class="clear"></div>
+            </div>
+            <div class="searchLine">
+                <form action="" method="POST">
+                    <input type="text" id="search" name="searchAcc" value="" placeholder="Enter Account Name ..." class="ac ui-autocomplete-input" />
+                    <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+                </form>
             </div>
         <div id="grid" class="widget">
             @grid.GetHtml(
