Fix lỗi file Excel
ForwardingQuotation, ForwardingServices, HandlingFee

--- a/rcAdmin/ForwardingServices/Edit.cshtml
+++ b/rcAdmin/ForwardingServices/Edit.cshtml
@@ -37,6 +37,8 @@
             {
                 errMSG = Constants_.UPDATE_TRANSACTION_FAIL;    
             }
+            
+            Response.Redirect("Index");
         }
     }
     Commons.releaseDBConnecttion(db);
