--- a/rcAdmin/ForwardingQuotation/Edit.cshtml
+++ b/rcAdmin/ForwardingQuotation/Edit.cshtml
@@ -1,220 +1,128 @@
 ﻿@{
-    //fileManager
-    Response.Cookies[Session.SessionID].Value = "True";
-    Response.Cookies[Session.SessionID].Expires = DateTime.Now.AddHours(3);
-    var fbURL= System.Web.VirtualPathUtility.ToAbsolute("~/tinymce/plugins/FileManager/Default.aspx?sessionid=") + Session.SessionID.ToString();
-    
-    //List all Layout files
-    DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/rcLayouts"));
-    FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly  );
+    Page.Title = "Edit Forwarding Quotation";
 
-    // list all the body pages
-    List<string> pBodies = rcFunctions.pageBodies();
-
-    var pId = Request["id"];
+    //Get Forwarding Quotation ID
+    var zoneId = Request["id"];
+    var serviceId = Request["sv"];
     var errMSG = "";
+
+    //Lấy thông tin chi tiết forwarding quotation
+    var db = Database.Open("Checking_Master");
+    var sqlSelect = "Select * from dbo.Forwarding_Quotation where Id_Forwarding_Zone=@0 and Id_Forwarding_Service=@1";
+    var data = db.QuerySingle(sqlSelect, zoneId, serviceId);
+    var type = data.Type;
+    var weightFrom = data.Weight_From;
+    var weightTo = data.Weight_To;
+    var price = data.Pricing;
     
-    var db = Database.Open("razorC");
-    var sqlSelect = " Select * from rc_Pages where pId=@0";
-    var data = db.QuerySingle(sqlSelect,pId);
+    // Lấy dữ liệu Forwarding Service
+    var sqlFwdSv = "SELECT [Id_Forwarding_Service] ,[Forwarding_Service_Name] FROM [dbo].[Forwarding_Service]";
+    var dataForwardingSv = db.Query(sqlFwdSv);
 
-    var pName = data.pName;
-    var pTitle = data.pTitle;
-    var pText = data.pText;
-    var mTitle = data.mTitle;
-    var mDescription = data.mDescription;
-    var mKeywords = data.mKeywords;
-    var pMasterPage = data.pMasterPage;
-    var pEditDate = data.pEditDate;
-    var pBody = data.pBody;
-    var pBodyFile = data.pBodyFile;
-
-    Page.Title = Html.Raw("razorC.net" + " <a href=\"WidgetsInSection.cshtml?pid=" + pId + "&pName=" + pName + "\" title=\"Widgets\">"
-    + "<img src=\"images/widgets.gif\" alt=\"Widgets\" class=\"rcGC\" /></a>");
+    // Lấy dữ liệu Forwarding Zone
+    var sqlFwZone = "SELECT [Id_Forwarding_Zone],[Id_Forwarding_Service],[Forwarding_Zone],[Comments]  FROM [dbo].[Forwarding_Zone]";
+    var dataZone = db.Query(sqlFwZone);
     
-    if (IsPost){
-        
-        
-         if (!Request["btnUpdate"].IsEmpty()){
-
-             //create backup copy before update
-             var sqlBackup = "Insert INTO rc_Backups (pwId, pwName, pwTitle, pwText, mTitle, mDescription, mKeywords, pMasterPage,pwDate, pBody, BType, pwFile) "
-                + "values (@0, @1, @2, @3, @4, @5, @6, @7, @8, @9, @10, @11)";
-             db.Execute(sqlBackup, pId, pName, pTitle, pText, mTitle, mDescription, mKeywords, pMasterPage, pEditDate, pBody, 'p', pBodyFile);
-             
-             //update record
-
-        pName = Request["pName"];
-        pTitle = Request["pTitle"];
-        pText = Request.Unvalidated("pText");
-        mTitle = Request["mTitle"];
-        mDescription = Request["mDescription"];
-        mKeywords = Request["mKeywords"];
-        pMasterPage = Request["pMasterPage"];
-        pEditDate = DateTime.Now;
-        pBody = false;
-        pBodyFile = Request["pBodyFile"];
-        if(Request["pBody"] == "on"){
-            pBody = true;
-        }
-
-        var sqlUpdate = "Update rc_Pages set "
-            + "pTitle=@0, pText=@1, mTitle=@2, mDescription=@3, mKeywords=@4, pMasterPage=@5, pEditdate=@6, pBody=@7, pBodyFile=@8 "
-            + "where pId=@9";
-
-        try
-        {
-            db.Execute(sqlUpdate, pTitle, pText, mTitle, mDescription, mKeywords, pMasterPage, pEditDate, pBody, pBodyFile, pId);
-            errMSG = "Data saved !";
-        }
-        catch (Exception ex)
-        {
-
-            errMSG = ex.Message.ToString();
-        }
-         }else         {
-             //from backup - load current version selected
-             if (Request["rcBackup"].AsInt() ==0){Response.Redirect("EditPage.cshtml?id=" + pId);}
-             //load from backup - post & btnUpdate is empty
-             var loadFromBackup = "Select * from rc_Backups where Id=@0";
-             var dataFromBackup = db.QuerySingle(loadFromBackup, Request["rcBackup"]);
-
-             pName = dataFromBackup.pwName;
-             pTitle = dataFromBackup.pwTitle;
-             pText = dataFromBackup.pwText;
-             mTitle = dataFromBackup.mTitle;
-             mDescription = dataFromBackup.mDescription;
-             mKeywords = dataFromBackup.mKeywords;
-             pMasterPage = dataFromBackup.pMasterPage;
-             pEditDate = dataFromBackup.pwDate;
-             pBody = dataFromBackup.pBody;
-             pBodyFile = dataFromBackup.pwFile;
-         }
-    }
-
-    int numberOfBackups = 0;
-    var selectBackups = "Select Id, pwDate from rc_Backups where bType='p' and pwID=@0 order by id Desc";
-    var dataBackups = db.Query(selectBackups, pId);
-    numberOfBackups = dataBackups.Count();
-    //delete old backups, we want keep only top 5 backups per page/widget
-    if (numberOfBackups > 5)
+    // Update Forwarding Quotation
+    if(IsPost)
     {
-        int TopRecords = numberOfBackups - 5;
-        var deleteBackups = "Delete from rc_Backups where Id in (Select TOP " + TopRecords + " Id from rc_Backups where bType='p' and pwID=@0 order by Id Asc)";
-        db.Execute(deleteBackups, pId);
-    }
+        if(!Request["btnUpdate"].IsEmpty())
+        {
+            serviceId = Request["fwService"];
+            zoneId = Request["fwZone"];
+            type = Request["pType"];
+            weightFrom = Request["weightFrom"];
+            weightTo = Request["weightTo"];
+            price = Request["price"];
 
-
+            string sql = "update Forwarding_Quotation" +
+                         " set Id_Forwarding_Zone=@0" +
+                         ", Id_Forwarding_Service=@1" +
+                         ", Type=@2" +
+                         ", Weight_From=@3" +
+                         ", Weight_To=@4" +
+                         ", Pricing=@5";
+            db.Execute(sql, zoneId, serviceId, type, weightFrom, weightTo, price);
+            
+            Response.Redirect("Index");
+        }
     }
+}
 
 @section head {
-<!-- You can use any editor you want. We decided to use TinyMCE visit http://www.tinymce.com// for licence and help -->
-<!-- TinyMCE -->
-<script src="@Href("~/tinymce/tinymce.min.js")" type="text/javascript"></script>
-<script type="text/javascript">
-        var language = navigator.userLanguage;
-
-        tinymce.init({
-            relative_urls: false,
-            // General options
-            selector: "textarea",
-            theme: "modern",
-            height: "400",
-            plugins: ["advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking save table contextmenu directionality emoticons template paste textcolor"],
-
-            file_browser_callback: function(field_name, url, type, win) { 
-            tinymce.activeEditor.windowManager.open({
-            title: "My file browser",
-            url: "@fbURL",
-            width: 950,
-            height: 650
-        }, {
-                window: win,
-                input: field_name,
-                sessionid: '@Session.SessionID.ToString()'
-                
-        });
-    }
-
-
-          });
-
-
-
-    </script>
-<!-- /TinyMCE -->
-
-<script type="text/javascript">
-    $(document).ready(function () {
-
-        $("#rcBackup").change(function () {
-            $("#editPage").submit();
-        });
-
-    });
-</script>
+    
 }
 @section menu{
-@RenderPage("_Menu.cshtml")
+    @RenderPage("../_Menu.cshtml")
 }
-<form action="" method="post" id="editPage">
- <fieldset>
-        <legend>Edit Page | <a href="~/rcAdmin/AllPages">All Pages</a> | <a href="~/rcAdmin/NewPage">Create Page</a> </legend>
-        @errMSG
-        Edited: @pEditDate 
-        <ol>
-                <li>
-                <label for="pName">Name:</label>
-                <input type="text" name="pName" id="pName" value="@pName" readonly="readonly" maxlength="100" /> <img src="images/help.gif" alt="help" title="Name of the page. You CANNOT change this." />
-                </li>
-
-               <li>
-                <label for="pMasterPage">Layout:</label>
-                <select id="pMasterPage" name="pMasterPage">
-               @foreach (var f in fileInfo)
-               {
-                <option value="@f.Name" @if (pMasterPage == f.Name)
-                                        {<text>selected="selected"</text>}>@rcFunctions.CleanRCNames(f.Name)</option>
-               }
-                </select>  <img src="images/help.gif" alt="help" title="Layout/theme that razorC will use to render the page. All layouts are in rcLayouts folder - you can change/modify them to fit your needs" />
-            </li>
-
-                <li>
-                <label for="pTitle">Title:</label>
-                <input type="text" name="pTitle" id="pTitle" value="@pTitle"  maxlength="250" /> <img src="images/help.gif" alt="help" title="Title of the page. Depending on template for body section (located in rcTemplates\Body\ folder) it will or will not be visible to end user" />
-                </li>
-                <li>
-                <label for="pBody">Body template:</label>
-                 <select id="pBodyFile" name="pBodyFile">
-               @foreach (var fName in pBodies)
-               {
-                <option value="@fName" @if (pBodyFile == fName)
-                                        {<text>selected="selected"</text>}>@rcFunctions.CleanRCNames(fName)</option>
-               }
-                </select>  <img src="images/help.gif" alt="help" title="Template that will be used to render a body part of your page. All body templates are in rcTempaltes/Body folder - you can add/change/modify them to fit your needs" />
-                Render body:<input id="pBody" name="pBody" type="checkbox" @if (pBody)
-                                                                           {<text>checked="checked"</text>} /> <img src="images/help.gif" alt="help" title="Should be selected for most of the pages, unless you need page that ONLY renders widgets in sections..." />
-                </li>
-            </ol>
-            
-</fieldset> 
-
-
-<fieldset>
-        <legend>Edit Meta Tags</legend>
-        <ol>
-                <li>
-                <label for="mTitle">Title:</label>
-                <input type="text" name="mTitle" id="mTitle" value="@mTitle" maxlength="100" /> <img src="images/help.gif" alt="help" title="Meta tag: Title" />
-                </li>
-                <li>
-                <label for="mDescription">Description:</label>
-                <input type="text" name="mDescription" id="mDescription" value="@mDescription" maxlength="200" /> <img src="images/help.gif" alt="help" title="Meta tag: Description" />
-                </li>
-                <li>
-                <label for="mKeywords">Keywords:</label>
-                <input type="text" name="mKeywords" id="mKeywords" value="@mKeywords" maxlength="200" /> <img src="images/help.gif" alt="help" title="Meta tag: keywords" />
-                </li>
-                </ol>
-                </fieldset>
-</form>
+<div class="fluid">
+    <form method="post" action="">
+        <fieldset>
+            <div class="widget">
+                <div class="whead">
+                    <h6>Edit Forwarding Quotation | <a href="~/rcAdmin/ForwardingQuotation">All Forwarding Quation</a> </h6>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pMasterPage">Forwarding Service:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="fwService" class="selectReq" name="fwService" @Validation.For("fwService")>
+                                @foreach (var f in dataForwardingSv)
+                                {
+                                    <option value="@f.Id_Forwarding_Service" @if (serviceId == f.Forwarding_Service_Name) { <text> selected="selected" </text>         }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
+                                }
+                            </select> @Html.ValidationMessage("pMasterPage")
+                        </div>
+                    </div>    
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="fwZone">Forwading Zone:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="fwZone" class="selectReq" name="fwZone" @Validation.For("fwZone")>
+                                @foreach (var f in dataZone)
+                                {
+                                    <option value="@f.Id_Forwarding_Zone" @if (zoneId == f.Forwarding_Zone) { <text> selected="selected" </text>            }>@rcFunctions.CleanRCNames(f.Forwarding_Zone)</option>
+                                }
+                            </select> @Html.ValidationMessage("pMasterPage")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pMasterPage">Type:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="pType" class="selectReq" name="pType" @Validation.For("pType")>
+                                <option value="0" @if(type == 0){<text>selected="selected"</text>}>DOX</option>
+                                <option value="1" @if(type == 1){<text>selected="selected"</text>}>WPX</option>
+                            </select>  @Html.ValidationMessage("pMasterPage")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Weight From:</label></div>
+                    <div class="grid9"><input type="text" name="weightFrom" id="weightFrom" value="@weightFrom" maxlength="100" @Validation.For("weightFrom") />  @Html.ValidationMessage("weightFrom")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Weight To:</label></div>
+                    <div class="grid9"><input type="text" name="weightTo" id="weightTo" value="@weightTo" maxlength="100" @Validation.For("weightTo") />  @Html.ValidationMessage("weightTo")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Price:</label></div>
+                    <div class="grid9"><input type="text" name="price" id="price" value="@price" maxlength="100" @Validation.For("price") />  @Html.ValidationMessage("price")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <input type="submit" name = "btnUpdate" value="Update" title="Insert" class="buttonM bBlue formSubmit" />
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
