--- a/rcAdmin/ForwardingQuotation/Index.cshtml
+++ b/rcAdmin/ForwardingQuotation/Index.cshtml
@@ -4,23 +4,53 @@
     //Database.OpenConnectionString("Checking_Master")
 
     //delete record 
-    var deleteID = Request["id"];
+    var zoneId = Request["id"];
     var svId = Request["sv"];
-    if (!deleteID.IsEmpty())
+    if (!zoneId.IsEmpty() && !svId.IsEmpty())
     {
         var sqlDelete = "delete dbo.Forwarding_Quotation where Id_Forwarding_Zone=@0 and Id_Forwarding_Service=@1";
-        db.Execute(sqlDelete, deleteID, svId);
+        db.Execute(sqlDelete, zoneId, svId);
         Response.Redirect("Index");
     }
 
 
-    var qStr = "Select * from dbo.Forwarding_Quotation order by Id_Forwarding_Zone desc";
+    var qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when fq.Type=0 then 'DOX' else 'WPX' end as Type_Name" +
+               " from Forwarding_Quotation AS fq" + 
+                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                " order by fq.Id_Forwarding_Zone desc";
     var data = db.Query(qStr);    
 
     var grid = new WebGrid(source: data,
                             rowsPerPage: 20);
 
 
+    //Search
+    var searchQuo = Request["searchQuo"];
+    if(searchQuo == "")
+    {
+        qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
+               " from Forwarding_Quotation AS fq" +
+                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                " order by fq.Id_Forwarding_Zone desc";
+        data = db.Query(qStr);
+
+        grid = new WebGrid(source: data,
+                                rowsPerPage: 20);
+    }
+    else
+    {
+        qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
+               " from Forwarding_Quotation AS fq" +
+                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                " where fz.Forwarding_Zone LIKE '%" + searchQuo + "%' order by fq.Id_Forwarding_Zone desc";
+        data = db.Query(qStr);
+
+        grid = new WebGrid(source: data,
+                                rowsPerPage: 20);
+    }
 }
 @section head {}
 @section menu{
@@ -33,6 +63,12 @@
                 <h6>All Forwarding Quotation | <a href="~/rcAdmin/ForwardingQuotation/New">Create Forwarding Quotation</a> </h6>
                 <div class="clear"></div>
             </div>
+            <div class="searchLine">
+                <form action="" method="POST">
+                    <input type="text" id="search" name="searchQuo" value="" placeholder="Enter Forwarding Quotation ..." class="ac ui-autocomplete-input"/> 
+                    <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+                </form>
+            </div>
             <div id="grid" class="widget">
                 @grid.GetHtml(
                         tableStyle: "tDark",
@@ -43,15 +79,15 @@
                             
                 @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Id_Forwarding_Zone" title="Widgets"><img
                     src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
-                                     grid.Column("Id_Forwarding_Zone", "Id_Forwarding_Zone", style: "rcGB"),
-                                     grid.Column("Id_Forwarding_Service", "Id_Forwarding_Service", style: "rcGB"),
-                                     grid.Column("Type", "Type", style: "rcGB"),
-                                     grid.Column("Weight_From", "Weight_From", style: "rcGB"),
-                                     grid.Column("Weight_To", "Weight_To", style: "rcGB"),
+                                     grid.Column("Forwarding_Zone", "Forwarding Zone", style: "rcGB"),
+                                     grid.Column("Forwarding_Service_Name", "Forwarding Service Name", style: "rcGB"),
+                                     grid.Column("Type_Name", "Type", style: "rcGB"),
+                                     grid.Column("Weight_From", "Weight From", style: "rcGB"),
+                                     grid.Column("Weight_To", "Weight To", style: "rcGB"),
                 grid.Column(format:
-                @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Zone" title="Edit Page"><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                @<a href="~/rcAdmin/ForwardingQuotation/Edit?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Edit Page"><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
                 grid.Column(format:
-                @<a href="Index?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                @<a href="~/rcAdmin/ForwardingQuotation/Index?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
                     <img src="images/delete.gif" alt="Delete" class="rcGC" />
                 </a>)
                                    )
