--- a/rcAdmin/HandlingFee/Index.cshtml
+++ b/rcAdmin/HandlingFee/Index.cshtml
@@ -13,7 +13,7 @@
     }
 
 
-    var qStr = "Select * from dbo.Handling_Fee order by Id_Handing_Fee desc";
+    var qStr = "Select *, case when Handling_Fee_Type=0 then 'Fixed' else 'Transhipments' end as Handling_Fee_Name from dbo.Handling_Fee order by Id_Handing_Fee desc";
     var data = db.Query(qStr);    
     
     var grid = new WebGrid(source: data,
@@ -39,10 +39,11 @@
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                                    grid.Column("Handling_Fee_Type", "Handling_Fee_Type", style: "rcGB"),
-                                    grid.Column("Weight_From", "Weight_From", style: "rcGB"),
-                                    grid.Column("Weight_To", "Weight_To", style: "rcGB"),
-                                    grid.Column("Handling_Fee", "Handling_Fee", style: "rcGB"),
+                                    //grid.Column("Handling_Fee_Type", "Handling_Fee_Type", style: "rcGB"),
+                                    grid.Column("Handling_Fee_Name", "Handling Fee", style: "rcGB"),
+                                    grid.Column("Weight_From", "Weight From", style: "rcGB"),
+                                    grid.Column("Weight_To", "Weight To", style: "rcGB"),
+                                    grid.Column("Handling_Fee", "Handling Fee", style: "rcGB"),
                     grid.Column(format: @<a href="~/rcAdmin/HandlingFee/Edit?id=@item.Id_Handing_Fee" title="Edit Page"><img src="images/edit_page.gif" alt="Edit?id=@item.Id_Handing_Fee" class="rcGC" /></a>),
                     grid.Column(format: @<a href="Index?id=@item.Id_Handing_Fee" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
     <img src="images/delete.gif" alt="Delete" class="rcGC" />
